Fixed anchor spacing issue, updated some prose, added a link

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.Anchor { /* Make clicking anchor links not hide headers. */
+  display: block;
+  position: relative; 
+  top: -30px;
+  visibility: hidden;
+}
+
 .App {
   background-color: #F2F2F2;
   color: black;
